# OpenGUI

./: .gitmodules  CMakeLists.txt  main.cpp
shaders/: frag.glsl  text_frag.glsl  text_vert.glsl  vert.glsl
src/EventSystem/: EventSystem.cpp  EventSystem.hpp
src/Graphics/Renderer/: Renderer.cpp  Renderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Graphics/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.hpp
src/Graphics/UI/: UI.cpp  UI.hpp
src/Renderer/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.hpp
src/Window/: Window.cpp  Window.hpp
